DPTB-180: slim down the fat jar and Docker image